# hypercomm

./: .gitignore  .lgtm.yml  CMakeLists.txt  Makefile  Makefile.common.in  README.md  component.hpp  manager.hpp  prepare_deps  tester.cc  tester.ci
.github/workflows/: mpi.yml  non_smp.yml  smp.yml
include/hypercomm/: components.hpp  core.hpp  reductions.hpp  sections.hpp  util.hpp  utilities.hpp
include/hypercomm/components/: attributes.hpp  base.hpp  component.hpp  comproxy.hpp  connector.hpp  identifiers.hpp  inbox.hpp  link.hpp  mailbox.hpp  manager.hpp  microstack.hpp  multistate_component.hpp  outbox.hpp  placeholder.hpp  registration.hpp  selectors.hpp  sentinel.hpp  state_server.hpp  status_listener.hpp  varstack.hpp
include/hypercomm/core/: broadcaster.hpp  callback.hpp  common.hpp  comparable.hpp  config.hpp  deliverable_value.hpp  entry_port.hpp  forwarding_callback.hpp  future.hpp  generic_locality.hpp  immediate.hpp  impermanent.hpp  inter_callback.hpp  locality.hpp  locality_base.hpp  locality_map.hpp  math.hpp  module.hpp  null_combiner.hpp  persistent_port.hpp  port_opener.hpp  proxy.hpp  resuming_callback.hpp  temporary_port.hpp  threading.hpp  typed_value.hpp  value.hpp  value_wrapper.hpp  wait_any.hpp  zero_copy_value.hpp
include/hypercomm/messaging/: common.hpp  deliverable.hpp  delivery.hpp  destination.hpp  endpoint.hpp  intercept_msg.hpp  interceptor.hpp  messages.hpp  messaging.hpp  packing.hpp
include/hypercomm/reductions/: common.hpp  contribution.hpp  reducer.hpp  reduction_port.hpp
include/hypercomm/sections/: generic_section.hpp  identity.hpp  imprintable.hpp  root_listener.hpp  section.hpp  section_identity.hpp  vector_section.hpp
include/hypercomm/serialization/: compatibility.hpp  construction.hpp  enrollment.hpp  is_pupable.hpp  polymorph.hpp  pup.hpp  serdes.hpp  special.hpp  storage.hpp  tags.hpp  traits.hpp
include/hypercomm/tasking/: common.hpp  flex_pup.hpp  workgroup.hpp
include/hypercomm/tree_builder/: back_inserter.hpp  common.hpp  manageable.hpp  manageable_base.hpp  managed_identity.hpp  managed_imprintable.hpp  tree_builder.hpp
include/hypercomm/utilities/: apply.hpp  backstage_pass.hpp  continuation.hpp  errors.hpp  fwd_pool.hpp  hash.hpp  internal.hpp  macros.hpp  otp.hpp  small_map.hpp  traits.hpp  unshared.hpp  weak_ref.hpp
src/: CMakeLists.txt
src/hypercomm/: CMakeLists.txt  utilities.cc
src/hypercomm/components/: CMakeLists.txt  component.cc  manager.cc  registration.cc
src/hypercomm/core/: CMakeLists.txt  entry_port.cc  locality.cc  locality.ci  module.cc
src/hypercomm/messaging/: CMakeLists.txt  interceptor.cc  messaging.cc  messaging.ci
src/hypercomm/serialization/: CMakeLists.txt  enrollment.cc
src/hypercomm/tasking/: CMakeLists.txt  tasking.ci  workgroup.cc
src/hypercomm/tree_builder/: CMakeLists.txt  tree_builder.ci
tests/: Makefile  tester.cc  tester.ci  tester.hh
tests/avalanche/: Makefile  tester.cc  tester.ci  tester.hh
tests/bcast_demo/: tester.cc  tester.ci  tester.hh
tests/cps_demo/: multistate_component.hpp  pseudo_stack.hpp  state_server.hpp  tagged_component.hpp  tester.cc  tester.ci  tester.hh  varstack.hpp
tests/forall_demo/: tester.cc  tester.ci  tester.hh
tests/future_check/: Makefile  tester.cc  tester.ci
tests/future_demo/: Makefile  tester.cc  tester.ci  tester.hh
tests/hello_world/: tester.cc  tester.ci  tester.hh
tests/lb_demo/: Makefile  tester.cc  tester.ci
tests/pingpong/: Makefile  tester.cc  tester.ci  tester.hh
tests/redn_demo/: Makefile  tester.cc  tester.ci  tester.hh
tests/sdag_demo/: Makefile  tester.cc  tester.ci  tester.hh
tests/task_demo/: Makefile  tester.cc  tester.ci  tester.hh
tests/tree_demo/: Makefile  tester.cc  tester.ci
tests/workgroup_demo/: Makefile  tester.cc  tester.ci
tests/zero_copy_demo/: tester.cc  tester.ci  tester.hh
